--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
-/_build
-/cover
-/deps
-/doc
-/.fetch
-erl_crash.dump
-*.ez
+.DS_Store
+.rebar3
+_*
+.eunit
+*.o
 *.beam
-/config/*.secret.exs
-.elixir_ls/
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+_build
+.idea
+*.iml
+rebar3.crashdump
+*~
+doc
