--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,8 @@
 
 {plugins, [steamroller]}.
 
+{profiles, [{test, [{erl_opts, [nowarn_export_all]}]}]}.
+
 {deps, [{telemetry, "1.0.0"}]}.
 
 {shell, [{apps, [hackney_telemetry]}]}.
