Add plugins for docs

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,26 @@
 {erl_opts, [debug_info]}.
 
-{plugins, [steamroller]}.
+{deps, [telemetry]}.
+
+{project_plugins, [steamroller, rebar3_format, rebar3_hex, rebar3_ex_doc]}.
 
 {profiles, [{test, [{erl_opts, [nowarn_export_all]}]}]}.
 
-{deps, [{telemetry, "1.0.0"}]}.
-
 {shell, [{apps, [hackney_telemetry]}]}.
+
+{ex_doc, [
+    {main, "README.md"},
+    {extras, [
+          {"README.md", #{title => "Overview"}},
+          {"CHANGELOG.md", #{title => "Changelog"}},
+          {"CODE_OF_CONDUCT.md", #{title => "Code of Conduct"}},
+          <<"LICENSE">>,
+          <<"NOTICE">>
+    ]},
+    {source_url, <<"https://github.com/therealreal/hackney_telemetry">>},
+    {homepage_url, <<"https://github.com/therealreal/hackney_telemetry">>}
+]}.
+
+{hex, [
+    {doc, #{provider => ex_doc}}
+]}.
