Run code formatter

--- a/rebar.config
+++ b/rebar.config
@@ -8,19 +8,15 @@
 
 {shell, [{apps, [hackney_telemetry]}]}.
 
-{ex_doc, [
-    {main, "README.md"},
-    {extras, [
-          {"README.md", #{title => "Overview"}},
-          {"CHANGELOG.md", #{title => "Changelog"}},
-          {"CODE_OF_CONDUCT.md", #{title => "Code of Conduct"}},
-          <<"LICENSE">>,
-          <<"NOTICE">>
-    ]},
-    {source_url, <<"https://github.com/therealreal/hackney_telemetry">>},
-    {homepage_url, <<"https://github.com/therealreal/hackney_telemetry">>}
-]}.
+{ex_doc,
+ [{main, "README.md"},
+  {extras,
+   [{"README.md", #{title => "Overview"}},
+    {"CHANGELOG.md", #{title => "Changelog"}},
+    {"CODE_OF_CONDUCT.md", #{title => "Code of Conduct"}},
+    <<"LICENSE">>,
+    <<"NOTICE">>]},
+  {source_url, <<"https://github.com/therealreal/hackney_telemetry">>},
+  {homepage_url, <<"https://github.com/therealreal/hackney_telemetry">>}]}.
 
-{hex, [
-    {doc, #{provider => ex_doc}}
-]}.
+{hex, [{doc, #{provider => ex_doc}}]}.
