--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,11 @@ on:
   pull_request:
 jobs:
   test:
-    name: Tests
+    name: Run tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        otp: ['24.2', '25.0']
     steps:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.5.0
@@ -18,10 +21,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Elixir
+      - name: Setup Erlang
         uses: erlef/setup-beam@v1
         with:
-          otp-version: "24.2"
+          otp-version: ${{matrix.otp}}
 
       - name: Retrieve cached dependencies
         uses: actions/cache@v2
