--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 
-{deps, [telemetry]}.
+{deps, [{telemetry, "~> 1.0"}]}.
 
 {project_plugins, [steamroller, rebar3_hex, rebar3_ex_doc]}.
 
